# imgui-forms

./: .gitignore  README.md  imgui-forms.wrap.template  meson.build
examples/: meson.build
examples/include/: example_form_macro.hpp.rm  example_form_traits.hpp
examples/src/: example_form.cpp
include/imgui-forms/: bindings.hpp  bindings_impl.inl  field_macros_internal.hpp  field_traits.hpp  input_text_utils.hpp
include/imgui_forms/: bindings.hpp  bindings_impl.inl  field_traits_macros.hpp
scripts/: build.sh  lint.sh  run_example_forms.sh  setup.sh  test.sh  test_ci.sh  watch_test.sh
subprojects/: cpp-forms.wrap
